fixed some alignments

--- a/public/style.css
+++ b/public/style.css
@@ -6642,3 +6642,7 @@ body.custom-background {
 .project {
   margin-bottom: 100px;
 }
+
+.description {
+	vertical-align: middle !important;
+}
